ajoute des changements